--- a/colider.cfg
+++ b/colider.cfg
@@ -1,5 +1,6 @@
-particles_quantity = 1
+particles_quantity = 20
 box_width = 1
 box_lenght = 1
-steps = 3000
-delta = 0.01
+steps = 300000
+delta = 0.00001
+velocity_coeficient = 500
