--- a/colider.cfg
+++ b/colider.cfg
@@ -2,5 +2,6 @@ particles_quantity = 20
 box_width = 1
 box_lenght = 1
 steps = 10000
-delta = 0.00001
-velocity_coeficient = 500
+delta = 0.0001
+velocity_coeficient = 50
+box_depth = 1
